--- a/discordDoubleColumn.theme.css
+++ b/discordDoubleColumn.theme.css
@@ -13,7 +13,7 @@
     --friends-icon-zoom: 80%;
 
     /* Edit this to change the color of the bullet over unread servers */
-    --unread-bullet-color: #8a8e94;
+    --unread-bullet-color: #f04747;
 }
 
 /* ADD CODE BELOW TO CUSTOMIZE THE THEME */
