--- a/JCTriple.theme.css
+++ b/JCTriple.theme.css
@@ -24,9 +24,9 @@
 
 none - no animation
 bounce - recommended 2s
-hue-rotate - recomended between 3s and 6s (depending on your bullet color)
-pulse - recomended 1s
-shake - recomended 2s
+hue-rotate - recommended between 3s and 6s (depending on your bullet color)
+pulse - recommended 1s
+shake - recommended 2s
 
 */
 
