--- a/JCQuintuple.theme.css
+++ b/JCQuintuple.theme.css
@@ -1,5 +1,5 @@
-//META{"name":"JustColumns - triple column server listing","description":"Theme made by Quake#1470, updates will come up automatiically if Discord applies changes","author":"Quake#1470","version":"1.0"}*//{}
-@import url(https://8xs4qxklp8.execute-api.us-east-2.amazonaws.com/release/gorawgit?giturl=/Qu4k3/JustColumns/master/css/jct.css);
+//META{"name":"JustColumns - quintuple column server listing","description":"Theme made by Quake#1470, updates will come up automatiically if Discord applies changes","author":"Quake#1470","version":"1.0"}*//{}
+@import url(https://8xs4qxklp8.execute-api.us-east-2.amazonaws.com/release/gorawgit?giturl=/Qu4k3/JustColumns/master/css/jcqi.css);
 
 /* DON'T TOUCH THE LINES ABOVE */
 
