--- a/css/jcqi.css
+++ b/css/jcqi.css
@@ -98,7 +98,7 @@
   display: none;
 }
 
-.theme-dark .container-1ETFDs.unread-2OHH1w:before {
+.theme-dark .selected-nT-gM3:before {
   background: var(--unread-bullet-color) !important;
   animation: var(--unread-animation) var(--unread-animation-duration) linear infinite;
 }
@@ -113,7 +113,7 @@
   margin-top: 8px !important;
 }
 
-.container-1ETFDs.unread-2OHH1w:before {
+.unread-2OHH1w:before {
   border-radius: 50%;
   height: 12px;
   width: 12px;
@@ -126,6 +126,49 @@
 
 .scroller-2TZvBN > .container-1ETFDs:nth-last-child(2) {
   margin-right: 0 !important;
+}
+
+/* extra fixes */
+
+.container-2td-dC {
+    margin-left: 8px;
+    margin-right: 2px;
+}
+
+.guildsErrorContainer-2uWYsE {
+  margin-right: 2px;
+  margin-left: 8px;
+}
+
+.scroller-2TZvBN > div:last-child {
+  margin-right: 2px;
+  margin-left: 8px;
+}
+
+.theme-dark .selected-nT-gM3:before {
+  background: var(--unread-bullet-color) !important;
+  animation: var(--unread-animation) var(--unread-animation-duration) linear infinite;
+}
+
+.selected-nT-gM3:before, .unread-2OHH1w:before {
+    border-radius: 50%;
+    content: " ";
+    height: 54px;
+    position: absolute;
+    margin-top: 0;
+    top: -2px;
+    left: -2px;
+    width: 54px;
+}
+
+.unread-2OHH1w:hover:before {
+    transition: .2s ease;
+    border-radius: 15px;
+}
+
+.container-1aNBdK {
+    margin-left: 8px;
+    margin-right: 2px;
 }
 
 
