--- a/css/jcqa.css
+++ b/css/jcqa.css
@@ -8,11 +8,11 @@
 }
 
 .wrapper-1Rf91z {
-  width: 240px;
+  width: 248px;
 }
 
 .scrollerWrap-1IAIlv {
-  width: 240px;
+  width: 248px;
 }
 
 .wrapper-1Rf91z .scroller-wrap {
@@ -98,7 +98,7 @@
   display: none;
 }
 
-.theme-dark .container-1ETFDs.unread-2OHH1w:before {
+.theme-dark .unread-2OHH1w:before {
   background: var(--unread-bullet-color) !important;
   animation: var(--unread-animation) var(--unread-animation-duration) linear infinite;
 }
@@ -148,22 +148,6 @@
 .theme-dark .selected-nT-gM3:before {
   background: var(--unread-bullet-color) !important;
   animation: var(--unread-animation) var(--unread-animation-duration) linear infinite;
-}
-
-.selected-nT-gM3:before, .unread-2OHH1w:before {
-    border-radius: 50%;
-    content: " ";
-    height: 54px;
-    position: absolute;
-    margin-top: 0;
-    top: -2px;
-    left: -2px;
-    width: 54px;
-}
-
-.unread-2OHH1w:hover:before {
-    transition: .2s ease;
-    border-radius: 15px;
 }
 
 .container-1aNBdK {
