--- a/css/jcqi.css
+++ b/css/jcqi.css
@@ -8,11 +8,11 @@
 }
 
 .wrapper-1Rf91z {
-  width: 308;
+  width: 308px;
 }
 
 .scrollerWrap-1IAIlv {
-  width: 308;
+  width: 308px;
 }
 
 .wrapper-1Rf91z .scroller-wrap {
