--- a/css/jcqi.css
+++ b/css/jcqi.css
@@ -144,7 +144,7 @@
   margin-left: 8px;
 }
 
-.scroller-2TZvBN > div:last-child {
+.scroller-2TZvBN > div:nth-last-child(-n+2) {
   margin-right: 2px;
   margin-left: 8px;
 }
