--- a/css/jcqa.css
+++ b/css/jcqa.css
@@ -226,11 +226,11 @@
 }
 
 .item-2hkk8m:not([style *= "height: 8px"]) {
-    border-color: transparent;
-    background-color: transparent;
+    border-color: transparent !important;
+    background-color: transparent !important;
 }
 .item-2hkk8m:not([style *= "opacity: 0.7"]) {
-    border-color: transparent;
+    border-color: transparent !important;
 }
 
 
